# MiniMythos

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
prompts/: attack_prompt.txt  map_prompt.txt  score_prompt.txt
src/minimythos/: cli.py  config.py  exceptions.py  orchestrator.py
src/minimythos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/minimythos/agents/: __init__.py  registry.py  runner.py
src/minimythos/models/: __init__.py  file_score.py  report.py
src/minimythos/steps/: __init__.py  attack_step.py  base.py  map_step.py  merge_step.py  score_step.py  select_step.py
src/minimythos/utils/: __init__.py  display.py  files.py  json_utils.py
tests/: conftest.py  test_cli.py  test_orchestrator.py  test_utils.py
tests/helpers/: fake_agent.py
tests/test_agents/: test_registry.py  test_runner.py
tests/test_models/: test_file_score.py  test_report.py
tests/test_steps/: test_attack_step.py  test_map_step.py  test_merge_step.py  test_score_step.py  test_select_step.py
