[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minimythos"
version = "0.1.0"
description = "AI Security Boss — orchestrates headless agents to find proven security bugs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Zimquadery" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Zimquadery/MiniMythos"
Repository = "https://github.com/Zimquadery/MiniMythos"
Issues = "https://github.com/Zimquadery/MiniMythos/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
minimythos = "minimythos.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
